--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
       </main>
       <footer>
         <div>© 2025 Hunter Duckworth Holdings Ltd.. <span class="small">All rights reserved.</span></div>
+        <div class="small" style="margin-top:10px;">
+  AlbertaTourism® is a registered trademark of Hunter Duckworth Holdings Ltd.
+</div>
+
         <div>Contact: <a href="mailto:info@albertatourism.com">info@albertatourism.com</a></div>
       </footer>
     </div>
