--- a/index.html
+++ b/index.html
@@ -1,5 +1,44 @@
 <!doctype html>
 <html lang="en">
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "@id": "https://hunterduckworthholdings.com/#tourism-portfolio",
+  "name": "Hunter Duckworth National Tourism Brand Portfolio",
+  "legalName": "Hunter Duckworth Holdings Ltd.",
+  "url": "https://hunterduckworthholdings.com",
+  "description": "A governed national portfolio of registered Canadian tourism trademarks and domain brands owned and administered by Hunter Duckworth Holdings Ltd. All portfolio brands are operated under licensing, co-branding, and territorial governance frameworks.",
+  "owns": [
+    {
+      "@type": "Brand",
+      "name": "AlbertaTourism",
+      "url": "https://albertatourism.com"
+    },
+    {
+      "@type": "Brand",
+      "name": "TourismAlberta",
+      "url": "https://tourismalberta.com"
+    },
+    {
+      "@type": "Brand",
+      "name": "OntarioTourism",
+      "url": "https://ontariotourism.com"
+    },
+    {
+      "@type": "Brand",
+      "name": "TourismOntario",
+      "url": "https://tourismontario.com"
+    },
+    {
+      "@type": "Brand",
+      "name": "SkiAlberta",
+      "url": "https://skialberta.com"
+    }
+  ]
+}
+</script>
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
